[project]
name = "tempo-cache-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mythical-Github", email = "67753356+Mythical-Github@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "packaging>=26.1",
    "tempo-cache",
]

[project.scripts]
tempo-cache-tools = "tempo_cache_tools:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
tempo-cache = { git = "https://www.github.com/Tempo-Organization/tempo-cache" }
